--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Typescript React app</title>
+  <title>eliot</title>
+
+  <!-- React Devtools -->
+  <script src="http://localhost:8097"></script>
 </head>
 <body>
-    <div id="container"></div>
-    <script src="./dist/bundle.js"></script>
+  <div id="app"></div>
+  <script src="dist/bundle.js"></script>
 </body>
 </html>
