--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>eliot</title>
-
-  <!-- React Devtools -->
-  <script src="http://localhost:8097"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Typescript React app</title>
 </head>
 <body>
-  <div id="app"></div>
-  <script src="dist/bundle.js"></script>
+    <div id="container"></div>
+    <script src="./dist/bundle.js"></script>
 </body>
 </html>
